implementação do Artigo

--- a/grid-template-area/index.html
+++ b/grid-template-area/index.html
@@ -15,7 +15,10 @@
     <main>
         <header>Header</header>
         <nav>NavBar</nav>
-        <article>Content</article>
+        <article>
+            <h1>Content</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo commodi perspiciatis porro nam eum ex animi, sequi ratione aliquam temporibus!</p>
+        </article>
         <footer>Footer</footer>
     </main>
 </body>
