implementação do navbar

--- a/grid-template-area/index.html
+++ b/grid-template-area/index.html
@@ -14,7 +14,15 @@
 <body>
     <main>
         <header>Header</header>
-        <nav>NavBar</nav>
+        <nav>
+            <h1>NavBar</h1>
+            <ul>
+                <li>menu 01</li>
+                <li>menu 02</li>
+                <li>menu 03</li>
+                <li>menu 04</li>
+            </ul>
+        </nav>
         <article>
             <h1>Content</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo commodi perspiciatis porro nam eum ex animi, sequi ratione aliquam temporibus!</p>
